# cxx-std-module

./: .gitignore  CMakeLists.txt  README.md  main.cpp
scripts/: clang_build.sh  clean.sh  cmake_build.sh  cmake_gcc_build.sh  gcc_build.sh  print_versions_of_tools.sh
